# PageGenie

./: .gitignore  GITHUB_SETUP.md  LICENSE  README.md  SETUP.md  ai_services.py  app.py  models.py  pdf_processor.py  pyproject.toml  replit.md  routes.py  sample_content.py
attached_assets/: Pasted-An-Architectural-Blueprint-for-an-AI-Enhanced-Immersive-PDF-ReaderPart-I-System-Architecture-and-Co-1753769599406_1753769599407.txt  Pasted-Of-course-Here-is-a-detailed-prompt-you-can-use-to-instruct-an-AI-to-generate-the-project-architect-1753769766825_1753769766827.txt
static/css/: book-style.css
static/js/: book-reader.js  pdf-renderer.js
templates/: book_reader.html  index.html
uploads/: .gitkeep
